SimpleColor[] shadows -> int[] shadows